# ai-code-review-agent

./: .env.example  .gitignore  .pre-commit-config.yaml  AI-Code-Review-Agent-Roadmap.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/design-decisions/: 0001-langgraph-for-review-orchestration.md  0002-performance-risk-prefilter.md  0003-cross-pass-finding-dedup.md
scripts/: eval_bug_review.py  eval_security_review.py  inspect_pr.py  manual_review_single_file.py  review_pr.py
src/review_agent/: __init__.py  config.py  db.py  github_client.py  ingest.py  logging_setup.py  main.py  reviewer.py  webhook.py
tests/: conftest.py  helpers.py  test_app_auth.py  test_classify.py  test_delivery.py  test_diff_fetcher.py  test_graph.py  test_ingest.py  test_ingest_integration.py  test_parser.py  test_perf_risk_filter.py  test_performance_analysis.py  test_report_render.py  test_report_synthesis.py  test_reviewer.py  test_secret_scan.py  test_security_analysis.py  test_security_golden_set.py  test_signature.py  test_store_integration.py  test_webhook.py
tests/fixtures/: pr_binary_files.json  pr_binary_meta.json  pr_edge_files.json  pr_edge_meta.json  pr_eval_files.json  pr_perf_files.json  pr_public_requests_7565_files.json  pr_public_requests_7565_meta.json  pr_public_requests_7566_files.json  pr_public_requests_7566_meta.json  pr_public_requests_files.json  pr_public_requests_meta.json  pr_small_files.json  pr_small_meta.json  pr_truncated_files.json  pr_truncated_meta.json  pr_variety_files.json  pr_variety_meta.json
(+32 files in other folders)
