[project]
name = "review-agent"
version = "0.1.0"
description = "AI code review agent for GitHub pull requests — Phase 1 vertical slice"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic-settings>=2.3",
    "httpx>=0.27",
    "anthropic>=0.80",
    "psycopg[binary]>=3.2",
    "pyjwt[crypto]>=2.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "mypy>=1.11",
    "pre-commit>=3.7",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"review_agent.prompts" = ["*.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
mypy_path = "src"
packages = ["review_agent"]
check_untyped_defs = true
